# sbft

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: run-all-tests.yml  semgrep.yml  trunk.yml
.trunk/: trunk.yaml
experiments/sac/: humanoid.yml
sbft/: config.py  experience.py  memory_transforms.py  observers.py  policies.py
sbft/agents/: __init__.py
sbft/agents/sac/: __init__.py  config.py  initializers.py  models.py  train.py
sbft/api/: __init__.py  memory.py  other.py
sbft/cli/: __init__.py  run.py
sbft/external_utils/: __init__.py  builtins_.py  other_utils.py  reproducibility.py  rich_.py  torch_utils.py
sbft/memories/: __init__.py
sbft/memories/experience_replay/: __init__.py  buffers.py  vanilla.py
sbft/network_factories/: __init__.py  feed_forward.py
sbft/torch_/: layers.py  networks.py
stubs/functorch/: __init__.pyi
stubs/toml/: __init__.pyi
stubs/torchopt/: __init__.pyi  version.pyi
stubs/torchopt/_src/: __init__.pyi  alias.pyi  base.pyi  clip.pyi  combine.pyi  hook.pyi  implicit_diff.pyi  linalg.pyi  linear_solve.pyi  schedule.pyi  transform.pyi  typing.pyi  update.pyi  utils.pyi  visual.pyi
stubs/torchopt/_src/accelerated_op/: __init__.pyi  adam_op.pyi
stubs/torchopt/_src/optimizer/: __init__.pyi  adam.pyi  adamw.pyi  base.pyi  rmsprop.pyi  sgd.pyi
stubs/torchopt/_src/optimizer/func/: __init__.pyi  base.pyi
stubs/torchopt/_src/optimizer/meta/: __init__.pyi  adam.pyi  adamw.pyi  base.pyi  rmsprop.pyi  sgd.pyi
tests/: conftest.py  test_pyproject_toml.py
tests/cli/: conftest.py  test_sbft.py
